# ex2mcmc

./: .gitignore  README.md
dcgan_code/: setup.py
sampling_sngan_experiments/: README.md  pyproject.toml  requirements.txt
sampling_sngan_experiments/configs/: complex_geom.yaml  gan_gaussians_2d_multistart.yaml  gan_gaussians_5d.yaml  gan_gaussians_5d_multistart.yaml  gaussians_2d.yaml  gaussians_5d.yaml  ill_cond_gaussian.yaml  mnist.yaml  one_gaussian.yaml  phi_four.yaml  swissroll.yaml  swissroll_multistart.yaml
sampling_sngan_experiments/configs/datasets/: breast.yaml  digits.yaml  eeg.yaml  pima.yaml
sampling_sngan_experiments/configs/models/: gan_gaussians_2d.yaml  gan_gaussians_5d.yaml
sampling_sngan_experiments/data/: pima.csv
sampling_sngan_experiments/experiments/: gan_gaussians_2d.py  gan_mnist.py  gaussians_2d.py  gaussians_5d.py  one_gaussian.py  swissroll.py  two_gaussians.py  utils.py
sampling_sngan_experiments/iterative_sir/celeba_utils/: celeba_utils.py  dcgan_celeba.py
sampling_sngan_experiments/iterative_sir/cifar10_utils/: __init__.py  cifar10_utils.py  dataloader.py  dcgan.py  discriminator.py  generator.py  logger.py  params_cifar10.py  setup.py  spectralnorm.py  train_cifar10.py  trainer.py
sampling_sngan_experiments/notebooks/: adaptive_mc.ipynb  banana_funnel.ipynb  bayesian_logistic_regression.ipynb  complex_geometry_flows.ipynb  flow_gaussians.ipynb  gaussians_2d.ipynb  gaussians_5d.ipynb  parse_results.ipynb  pyro_gmm.ipynb  swissroll.ipynb  two_gaussians.ipynb
sampling_sngan_experiments/runs/: complex_geometry.sh
(+194 files in other folders)
